--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -16,6 +16,9 @@
                     </image>
                 </ImageView>
                 <Button layoutX="7.0" layoutY="105.0" onAction="#handleRegisterAction" text="Register">
+                <font>
+                    <Font name = "System Bold" size = '18' />
+                </font>
                 </Button>
                 <HBox alignment="bottom_right" layoutX="20.0" layoutY="265.0" prefHeight="16.0" prefWidth="100.0" spacing="10" />
 
@@ -23,21 +26,32 @@
                 </ChoiceBox>
 
                 <Label layoutX="10.0" layoutY="26.0" prefHeight="35.0" prefWidth="51.0">
+                    <font>
+                        <Font name = "System Bold" size = '18' />
+                    </font>
                 </Label>
 
                 <TextField fx:id="usernameField" layoutX="0.0" layoutY="-70.0" />
 
-                <Label layoutX="8.0" layoutY="-34.0" text="Password:">
+                <Label layoutX="8.0" layoutY="-34.0" text="Password:" textFill="WHITE">
+                    <font>
+                        <Font name = "System Bold" size = '18' />
+                    </font>
                 </Label>
 
-                <Label layoutX="6.0" layoutY="-95.0" text="Username:">
+                <Label layoutX="6.0" layoutY="-95.0" text="Username:" textFill="WHITE">
+                    <font>
+                        <Font name = "System Bold" size = '18' />
+                    </font>
                 </Label>
 
                 <PasswordField fx:id="passwordField" layoutX="0.0" layoutY="0.0" />
             </children>
         </AnchorPane>
         <Text id="title-text" fill="WHITE" layoutX="82.0" layoutY="35.0" smooth="false" text="Easy Invest">
-
+            <font>
+                <Font name = "System Bold" size = '18' />
+            </font>
         </Text>
     </children>
 </AnchorPane>
