--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -31,9 +31,9 @@
                     </font>
                 </Label>
 
-                <TextField fx:id="usernameField" layoutX="0.0" layoutY="-70.0" />
+                <TextField fx:id="usernameField" layoutY="-70.0" />
 
-                <Label layoutX="8.0" layoutY="-34.0" text="Password:" textFill="WHITE">
+                <Label layoutX="6.0" layoutY="-34.0" text="Password:" textFill="WHITE">
                     <font>
                         <Font name = "System Bold" size = '18' />
                     </font>
@@ -45,7 +45,7 @@
                     </font>
                 </Label>
 
-                <PasswordField fx:id="passwordField" layoutX="0.0" layoutY="0.0" />
+                <PasswordField fx:id="passwordField"/>
             </children>
         </AnchorPane>
         <Text id="title-text" fill="WHITE" layoutX="82.0" layoutY="35.0" smooth="false" text="Easy Invest">
