--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -20,8 +20,14 @@
                     <Font name = "System Bold" size = '18' />
                 </font>
                 </Button>
-                <HBox alignment="bottom_right" layoutX="20.0" layoutY="265.0" prefHeight="16.0" prefWidth="100.0" spacing="10" />
+                <Button layoutX="7.0" layoutY="160.0" onAction="#goToLogin" text="Login">
+                    <font>
+                        <Font name="System Bold" size="18" />
+                    </font>
+                </Button>
 
+                <HBox alignment="bottom_right" layoutX="20.0" layoutY="265.0" prefHeight="16.0" prefWidth="100.0" spacing="10" />
+                <Text fx:id="registrationMessage" fill="#FFFFFF" layoutX="200.0" layoutY="10.0" wrappingWidth="87.0" />
                 <ChoiceBox fx:id="role" layoutX="-2.0" layoutY="62.0" prefWidth="150.0">
                 </ChoiceBox>
 
