--- a/src/main/resources/modify_projects.fxml
+++ b/src/main/resources/modify_projects.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
@@ -18,17 +17,17 @@
                         <Image url="@projects.jpg" />
                     </image>
                 </ImageView>
-                <Button layoutX="7.0" layoutY="105.0" onAction="#goToCreate" text="Create Project">
+                <Button layoutX="240" layoutY="35.0" onAction="#goToCreate" text="Create Project">
                     <font>
                         <Font name = "System Bold" size = '18' />
                     </font>
                 </Button>
-                <Button layoutX="7.0" layoutY="160.0" onAction="#goToEdit" text="Edit Project">
+                <Button layoutX="250" layoutY="105.0" onAction="#goToEdit" text="Edit Project">
                     <font>
                         <Font name="System Bold" size="18" />
                     </font>
                 </Button>
-                <Button layoutX="7.0" layoutY="160.0" onAction="#goToDelete" text="Edit Project">
+                <Button layoutX="250" layoutY="175.0" onAction="#goToDelete" text="Delete Project">
                     <font>
                         <Font name="System Bold" size="18" />
                     </font>
@@ -36,7 +35,7 @@
 
             </children>
         </AnchorPane>
-        <Text id="title-text" fill="WHITE" layoutX="82.0" layoutY="35.0" smooth="false" text="Modify my projects">
+        <Text id="title-text" fill="WHITE" layoutX="230" layoutY="120" smooth="false" text="Modify my projects">
             <font>
                 <Font name = "System Bold" size = '18' />
             </font>
