--- a/src/main/resources/create_project.fxml
+++ b/src/main/resources/create_project.fxml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.*?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CreateProject"
+            fx:controller="easy.invest.controllers.CreateProjectController"
             prefHeight="400.0" prefWidth="600.0">
-
+    <children>
+        <AnchorPane layoutX="14.0" layoutY="145.0" prefHeight="400.0" prefWidth="650.0">
+            <children>
+                <ImageView fitHeight="400.0" fitWidth="650.0" layoutX="-15.0" layoutY="-140.0" pickOnBounds="true">
+                    <image>
+                        <Image url="@projects.jpg" />
+                    </image>
+                </ImageView>
+                <Button layoutX="240" layoutY="35.0" onAction="#create" text="Create">
+                    <font>
+                        <Font name = "System Bold" size = '18' />
+                    </font>
+                </Button>
+                <Button layoutX="250" layoutY="105.0" onAction="#cancel" text="Cancel">
+                    <font>
+                        <Font name="System Bold" size="18" />
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
+        <Text id="title-text" fill="WHITE" layoutX="230" layoutY="120" smooth="false" text="Create project">
+            <font>
+                <Font name = "System Bold" size = '18' />
+            </font>
+        </Text>
+    </children>
 </AnchorPane>
