--- a/src/main/resources/create_project.fxml
+++ b/src/main/resources/create_project.fxml
@@ -1,38 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="easy.invest.controllers.CreateProjectController"
-            prefHeight="400.0" prefWidth="600.0">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easy.invest.controllers.CreateProjectController">
     <children>
-        <AnchorPane layoutX="14.0" layoutY="145.0" prefHeight="400.0" prefWidth="650.0">
+        <AnchorPane layoutX="14.0" layoutY="147.0" prefHeight="262.0" prefWidth="636.0">
             <children>
                 <ImageView fitHeight="400.0" fitWidth="650.0" layoutX="-15.0" layoutY="-140.0" pickOnBounds="true">
                     <image>
                         <Image url="@projects.jpg" />
                     </image>
                 </ImageView>
-                <Button layoutX="240" layoutY="35.0" onAction="#create" text="Create">
-                    <font>
-                        <Font name = "System Bold" size = '18' />
-                    </font>
-                </Button>
-                <Button layoutX="250" layoutY="105.0" onAction="#cancel" text="Cancel">
+                <Button layoutX="140.0" layoutY="190.0" onAction="#create" text="Create">
                     <font>
                         <Font name="System Bold" size="18" />
                     </font>
                 </Button>
+                <Button layoutX="404.0" layoutY="190.0" onAction="#cancel" text="Cancel">
+                    <font>
+                        <Font name="System Bold" size="18" />
+                    </font>
+                </Button>
+                <Label layoutX="66.0" layoutY="-10.0" text="Project title:" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="titleField" layoutX="66.0" layoutY="16.0" />
+
+                <Label layoutX="66.0" layoutY="69.0" prefHeight="17.0" prefWidth="113.0" text="Description:" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="descriptionField" layoutX="66.0" layoutY="96.0" prefHeight="70" prefWidth="194.0" />
+                <Label layoutX="393.0" layoutY="19.0" text="Location:" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="locationField" layoutX="393.0" layoutY="47.0" />
+                <Label layoutX="390.0" layoutY="89.0" text="Necessary Funds" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="fundsField" layoutX="393.0" layoutY="118.0" />
+              <Text id="title-text" fill="WHITE" layoutX="250.0" layoutY="-27.0" smooth="false" text="Create project">
+                  <font>
+                      <Font name="System Bold" size="18" />
+                  </font>
+              </Text>
             </children>
         </AnchorPane>
-        <Text id="title-text" fill="WHITE" layoutX="230" layoutY="120" smooth="false" text="Create project">
-            <font>
-                <Font name = "System Bold" size = '18' />
-            </font>
-        </Text>
     </children>
 </AnchorPane>
