--- a/src/main/resources/choose_project.fxml
+++ b/src/main/resources/choose_project.fxml
@@ -10,7 +10,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="348.0">
                <children>
-                  <ListView prefHeight="393.0" prefWidth="348.0" />
+                  <ListView id = "project_list" prefHeight="393.0" prefWidth="348.0" />
                </children>
             </AnchorPane>
         </content>
